<resources>
    <string name="app_name">Camycar Rentals</string>
    <string name="maquinas">Maquinas</string>
    <string name="alquilar">Alquilar</string>
    <string name="fabricante">Fabricante</string>
    <string name="quitar_filtros">Quitar filtros</string>
    <string name="aplicar">Aplicar</string>
    <string name="orden_alfabetico">Orden alfabetico</string>
    <string name="filtrar_por">Filtrar por:</string>
    <string name="filtros">Filtros</string>
    <string name="elevadora">Elevadora</string>
    <string name="torito">Torito</string>
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="perfil">Perfil</string>
    <string name="register_text">Inicie sesión o registrarse</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="primer_apellido">Primer Apellido</string>
    <string name="segundo_apellido">Segundo Apellido</string>
    <string name="dni">Dni</string>
    <string name="repita_la_contrase_a">Repita la contraseña</string>
</resources>