<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.UsuarioView.RegistroActivity">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="50dp"/>

    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombreUsuario"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:padding="15dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/primer_apellido"
            android:layout_marginEnd="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPrimerApellido"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/segundo_apellido"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSegundoApellido"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>





    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCorreo"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dni"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDni"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repita_la_contrase_a"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRePassword"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </com.google.android.material.textfield.TextInputLayout>



        <Button android:layout_width="match_parent" android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:id="@+id/buttonRegister"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/registro"
            style="@style/Widget.MaterialComponents.Button"
            />

</LinearLayout>